<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalExpenditureManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pie_chart">Sample Pie Chart</string>
    <string name="account">Account</string>
    <string name="income">Income: </string>
    <string name="expense">Expense: </string>
    <string name="balance">Balance: </string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
	<string name="amount">Amount: </string>
	<string name="name">Name: </string>
	<string name="category">Category: </string>
	<string name="date">Date: </string>
	<string name="note">Note: </string>
	<string name="pick_income_date_desciption">Pick Income Date</string>
	<string name="save">Save</string>
	<string name="currency">đ</string>
	<string name="error">Error</string>
	<string name="invalid_amount">Invalid amount</string>
	<string name="report">Report</string>
	<string name="settings">Settings</string>
</resources>
