<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >
    <TextView
        android:text="@string/account" 
        style="@style/TitleStyle"
        />
    
    <TextView 
	    android:text="@string/income"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:paddingLeft="@dimen/activity_horizontal_margin"
	   	android:paddingRight="@dimen/activity_horizontal_margin"
	   	android:paddingTop="@dimen/activity_vertical_margin" 
    />
	<TextView 
	    android:text="@string/expense"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	   	android:paddingLeft="@dimen/activity_horizontal_margin"
	   	android:paddingRight="@dimen/activity_horizontal_margin"
	   	android:paddingTop="@dimen/activity_vertical_margin" 
	    />
	<View
 		android:layout_width="match_parent"
 		android:layout_height="1dp"
 		android:background="#312f2f" />
	<TextView 
	    android:text="@string/balance"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	   	android:paddingLeft="@dimen/activity_horizontal_margin"
	   	android:paddingRight="@dimen/activity_horizontal_margin"
	   	android:paddingTop="@dimen/activity_vertical_margin" 
	    />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    >
	    <Button
	        android:id="@+id/btnAddIncome"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_income" 
	        />
	    <Button
	        android:id="@+id/btnAddExpense"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_expense" 
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    
	    android:gravity="center"
	    >
	    <Button
	        android:id="@+id/btnToday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/today" 
	        style="?android:attr/buttonBarButtonStyle"
	        />
	    <Button
	        android:id="@+id/btnWeek"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/week" 
	         style="?android:attr/buttonBarButtonStyle"
	        />
	    <Button
	        android:id="@+id/btnMonth"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/month" 
	         style="?android:attr/buttonBarButtonStyle"
	        />
	    <Button
	        android:id="@+id/btnQuarter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/quarter" 
	         style="?android:attr/buttonBarButtonStyle"
	        />
	    <Button
	        android:id="@+id/btnYear"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/year" 
	         style="?android:attr/buttonBarButtonStyle"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	   	android:paddingRight="@dimen/activity_horizontal_margin"
	    android:orientation="vertical"
	    >
	    <TextView
	        android:id="@+id/txtMode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="start"
	        />
	    <TextView
	        android:id="@+id/txtDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="start"
	        />
	    <com.androidplot.pie.PieChart
            android:id="@+id/mySimplePieChart"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"/>
	    <TextView 
	    android:text="@string/income"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:paddingLeft="@dimen/activity_horizontal_margin"
	   	android:paddingRight="@dimen/activity_horizontal_margin"
	   	android:paddingTop="@dimen/activity_vertical_margin" 
	   	android:paddingBottom="@dimen/activity_vertical_margin"
	    />
	    <View
	 		android:layout_width="match_parent"
	 		android:layout_height="1dp"
	 		android:background="#312f2f" />
		<TextView 
		    android:text="@string/expense"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		   	android:paddingLeft="@dimen/activity_horizontal_margin"
		   	android:paddingRight="@dimen/activity_horizontal_margin"
		   	android:paddingTop="@dimen/activity_vertical_margin" 
		    />
		
	</LinearLayout>
</LinearLayout>
