<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.personalexpendituremanagement.MainActivity" >

    <item
        android:id="@+id/account"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/account"
         android:icon="@drawable/ic_action_accounts"
        />
    <item
        android:id="@+id/report"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/report"
        android:icon="@drawable/ic_action_view_as_list"
        />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        />
</menu>
