<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:text="Report"
        style="@style/TitleStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >

        <EditText
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="From Date"
            android:id="@+id/txtFrom" />

        <EditText
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="To Date"
            android:id="@+id/txtTo" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
        <TextView
            android:text="@string/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/txtRPBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            style="@style/IncomeFormat"

            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/txtBalanceCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/currency"
            style="@style/IncomeFormat"
            />

        <Button
            android:id="@+id/btnRPView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txtMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            />
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"

            />
        
        <com.androidplot.pie.PieChart
            android:id="@+id/reportPieChart"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"/>
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/IncomeFormat"
                android:id="@+id/txtRPIncome"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/currency"
                style="@style/IncomeFormat"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#312f2f" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ExpenseFormat"
                android:id="@+id/txtRPExpense"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/currency"
                style="@style/ExpenseFormat"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
